// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideMenu container it should render correctly 1`] = `
<div
  className="side-menu"
>
  <div
    className="brand"
  >
    <img
      alt="SANbase"
      height="22"
      src="logo_sanbase.png"
      width="115"
    />
  </div>
  <AppMenu
    handleNavigation={[Function]}
  />
  <AuthControl
    login={[Function]}
    user={
      Object {
        "token": null,
        "username": null,
      }
    }
  />
</div>
`;

exports[`SideMenu container it should show login button 1`] = `
<div
  className="side-menu"
>
  <div
    className="brand"
  >
    <img
      alt="SANbase"
      height="22"
      src="logo_sanbase.png"
      width="115"
    />
  </div>
  <AppMenu
    handleNavigation={[Function]}
  />
  <AuthControl
    login={[Function]}
    user={
      Object {
        "token": "",
        "username": "",
      }
    }
  />
</div>
`;

exports[`SideMenu container it should show logout button 1`] = `
<div
  className="side-menu"
>
  <div
    className="brand"
  >
    <img
      alt="SANbase"
      height="22"
      src="logo_sanbase.png"
      width="115"
    />
  </div>
  <AppMenu
    handleNavigation={[Function]}
  />
  <AuthControl
    login={[Function]}
    user={
      Object {
        "token": "asdfasdfi",
        "username": "user",
      }
    }
  />
</div>
`;
